--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
     "apollo-server-express": "^2.12.0",
     "argon2": "^0.26.2",
     "class-validator": "^0.12.1",
+    "connect-redis": "^4.0.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^14.1.1",
+    "ioredis": "^4.16.3",
     "pg": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.6",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
+    "@types/connect-redis": "0.0.13",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/express-session": "^1.17.0",
+    "@types/ioredis": "^4.16.0",
     "@types/node": "^13.13.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
